fix: Fixed live cursor hidden overflow and scroll position

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html, body {
   right: 0;
   bottom: 0;
   left: 0;
+  overflow: hidden;
 }
 
 body {
